--- a/hugo.toml
+++ b/hugo.toml
@@ -7,6 +7,10 @@ enableEmoji = true
 [markup.highlight]
   noClasses = false
 
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
+
 ############################## Global Social Icons ################################
 [[params.socialIcons]]
 name = "linkedin"
