--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 title = "Renan's blog"
-baseURL = 'https://konanzin.github.io/blog/'
+baseURL = 'https://konanzin.github.io/'
 theme = "hugo-blog-awesome"
 defaultContentLanguage = "en"
 enableEmoji = true
